# rffw

./: .gitignore  Makefile  README.md  __init__.py  compile_rffw.py  environment.yml  hrftn.f  pyproject.toml  rffw.f90  setup.cfg  setup.py
example/: example.py
rffw.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
