[metadata]
name = rffw
version = 0.0.1
author = Stephen Akinremi, Islam Fadel
author_email = s.akinremi@utwente.nl, i.e.a.m.fadel@utwente.nl
description = Forward calculation of 1D radial receiver function
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/akinremisa/rffw
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Physics
keywords = Seismology, Receiver Function, Forward Modelling,  Earth Sciences




[options]
python_requires = >=3.6, <3.11
install_requires =numpy<=1.23.5